--- a/02_SurveyForm/SurveyForm.html
+++ b/02_SurveyForm/SurveyForm.html
@@ -1,22 +1,24 @@
-<div ="main">
+<div id="main">
 <h1 id="title"> Rainbow cake order </h1>
 <p id="description"> Fill out the fields to purchase rainbow cakes </p>
   <form id="survey-form"> 
-    <label for "name"> Name: </label>
+    <label id="name-label" for "name"> Name: </label>
     <input id="name" 
            type="text" 
            name="name"
            placeholder="Max Mustermann" required>
     </input>
+  
     <br>
-  <label for"email"> E-Mail:</label>
+  <label id="email-label" for"email"> E-Mail:</label>
   <input id="email" 
-         type="text"
+         type="email"
          name="email"
          placeholder="maxMu@gmail.com" required>
     </input>  
+
     <br>
-<label for "number"> number of cakes to order </label>
+<label id="number-label" for "number"> number of cakes to order </label>
   <input id="number"
          type="number"
          name="number"
@@ -25,10 +27,46 @@
          max="99"
          required>
   </input> 
+
+  <br>
+<label for="dropdown" id="model"> Select cake type </label>
+<select id="dropdown">
+  <option value="Canadian_rainbow"> Canadian Rainbow </option>
+  <option value="Irish_rainbow"> Irish Rainbow </option>
+  <option value="Teletubby_rainbow"> Teletubby Rainbow </option>
+  <option value="DaVinci_rainbow"> DaVinci Rainbow </option>
+</select>
+
+<br>
+<br>
+<label for="rainbow_layers" id="rainbow_layers"> <b>Rainbow layers: </b></label>
+  <br>
+  <input id="rainbow_layers" type="radio" id="!_layers" name="layers" value="3">
+  <label for="rainbow_layers"> 1 layer </label>
+  <br>
+  <input id="rainbow_layers" type="radio" id="2_layers" name="layers" value="3">
+  <label for="rainbow_layers"> 2 layers </label>
+  <br>
+  <input id="rainbow_layers" type="radio" id="3_layers" name="layers" value="3">
+  <label for="rainbow_layers"> 3 layers </label>
+  <br>
   <br>
 
+<label for="toppings"> <b> Add toppings </b> </label>
+<br>
+<input type="checkbox" id="checkbox" name="toppings" value="chocolate_chips">
+<label for="checkbox"> chocolate chips </label><br>
+<input type="checkbox" id="checkbox" name="toppings" value="haribo">
+<label for="checkbox"> Haribo </label><br>
+<input type="checkbox" id="checkbox" name="toppings" value="Nutella_cream">
+<label for="checkbox"> Nutella Cream </label><br>
+ <br>
 
-
+<label id="textarea"> <b> Additional comments </b> </label>
+<br>
+<textarea id="textarea" name="" rows="4" cols="42"> </textarea>
+<br>
+<input id="submit" type="submit" name="submit" value="order my perfect cake">
 
   </form>
 </div>
